# itc-benchmarks

./: .gitignore  COPYING  Makefile.am  README.md  bootstrap  configure.ac  st_overflow_network  test_overflow.py
01.w_Defects/: Makefile.am  bit_shift.c  buffer_overrun_dynamic.c  buffer_underrun_dynamic.c  cmp_funcadr.c  conflicting_cond.c  cwe_125_example_1.c  cwe_125_example_2.c  cwe_190_example_1.c  cwe_190_example_2.c  cwe_191_example_1.c  cwe_191_example_2.c  cwe_242_example_1.c  cwe_242_example_2.c  cwe_367_example_1.c  cwe_367_example_2.c  cwe_369_example_1.c  cwe_369_example_2.c  cwe_476_example_1.c  cwe_476_example_2.c  cwe_606_example_1.c  cwe_606_example_2.c  cwe_611_example_1.c  cwe_611_example_2.c  cwe_676_example_1.c  cwe_676_example_2.c  cwe_732_example_1.c  cwe_732_example_2.c  cwe_789_example_1.c  cwe_789_example_2.c  cwe_798_example_1.c  cwe_798_example_2.c  data_lost.c  data_overflow.c  data_underflow.c  dead_code.c  dead_lock.c  deletion_of_data_structure_sentinel.c  dl_injection.c  double_free.c  (+49 more)
02.wo_Defects/: Makefile.am  bit_shift.c  buffer_overrun_dynamic.c  buffer_underrun_dynamic.c  cmp_funcadr.c  conflicting_cond.c  data_lost.c  data_overflow.c  data_underflow.c  dead_code.c  dead_lock.c  deletion_of_data_structure_sentinel.c  double_free.c  double_lock.c  double_release.c  endless_loop.c  free_nondynamically_allocated_memory.c  free_null_pointer.c  func_pointer.c  function_return_value_unchecked.c  improper_termination_of_block.c  insign_code.c  invalid_extern.c  invalid_extern_1.c  invalid_memory_access.c  littlemem_st.c  livelock.c  main.c  (+25 more)
(+16 files in other folders)
